// Vitest Snapshot v1

exports[`Options resolve > react 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/react/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "tsx",
    "jsx",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\|ts\\|js\\)\\$/,
  "importMode": [Function],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "resolveExtensions": [Function],
    "resolveRoutes": [Function],
    "stringify": {
      "component": [Function],
      "dynamicImport": [Function],
      "final": [Function],
    },
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeStyle": "next",
}
`;

exports[`Options resolve > solid 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/solid/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "tsx",
    "jsx",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\|ts\\|js\\)\\$/,
  "importMode": [Function],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "resolveExtensions": [Function],
    "resolveRoutes": [Function],
    "stringify": {
      "dynamicImport": [Function],
      "final": [Function],
    },
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeStyle": "next",
}
`;

exports[`Options resolve > vue 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "importMode": [Function],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "hmr": {
      "added": [Function],
      "changed": [Function],
      "removed": [Function],
    },
    "resolveExtensions": [Function],
    "resolveRoutes": [Function],
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeStyle": "next",
}
`;
